force-app/main/default/objects/MonthlyPostingSummary__c/MonthlyPostingSummary__c.object-meta.xml
<CustomObject>
    <description>Monthly Posting Summary  for Journal Line Items</description>
    <label>MonthlyPostingSummary</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MonthlyPostingSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>