force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Current_Posting_Month__c.field-meta.xml
<CustomField>
    <fullName>MPS_Current_Posting_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Posting Month</label>
    <type>Checkbox</type>
</CustomField>