force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Fiscal_Year__c.field-meta.xml
<CustomField>
    <fullName>MPS_Fiscal_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fiscal Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>