force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Month__c.field-meta.xml
<CustomField>
    <fullName>MPS_Month__c</fullName>
    <label>MPS Month</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>