force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Publish_Date__c.field-meta.xml
<CustomField>
    <fullName>MPS_Publish_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Publish Date</label>
    <type>Date</type>
</CustomField>