force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Status__c.field-meta.xml
<CustomField>
    <fullName>MPS_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>