force-app/main/default/objects/MonthlyPostingSummary__c/fields/MPS_Total_YB_Posting_Amount__c.field-meta.xml
<CustomField>
    <fullName>MPS_Total_YB_Posting_Amount__c</fullName>
    <label>Total YB Posting Amount</label>
    <summarizedField>PostingLineItem__c.PLI_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PostingLineItem__c.PLI_Cost_Centre__c</field>
        <operation>notEqual</operation>
        <value>250600</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PostingLineItem__c.PLI_Cost_Centre__c</field>
        <operation>notEqual</operation>
        <value>902175</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>PostingLineItem__c.PLI_Corporate_Code__c</field>
        <operation>equals</operation>
        <value>00601</value>
    </summaryFilterItems>
    <summaryForeignKey>PostingLineItem__c.MonthlyPostingSummary__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>