force-app/main/default/objects/MonthlyPostingSummary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>MPS_Fiscal_Year__c</columns>
    <columns>MPS_Status__c</columns>
    <columns>MPS_Publish_Date__c</columns>
    <columns>MPS_Total_CB_Posting_Amount__c</columns>
    <columns>MPS_Total_YB_Posting_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>MPS_Fiscal_Year__c</field>
        <operation>equals</operation>
        <value>FY20</value>
    </filters>
    <label>All</label>
</ListView>